# llm-recsys

./: .gitignore  DATASETS.md  Dockerfile  LICENSE  LLM_EXPERIMENTS.md  README.md  TWO_TOWER_MODEL.md  data.py  data_instacart.py  docker-compose.yml  eval.py  exp5_dual_head.py  generate_report.py  llm_item_enrichment.py  llm_reranker.py  llm_user_narration.py  main.py  model.py  pyproject.toml  ranker.py  requirements.txt  run_overnight.sh  run_training.sh  synthetic_context.py  test_fixes.py  xgb_model.py
.github/workflows/: ci.yml
api/: main.py  models.py  recommender.py
docs/superpowers/specs/: 2026-04-05-overnight-llm-experiments-design.md
evals/: description_evals.py  prompt_registry.py  prompt_versions.json  reranker_evals.py  run_evals.py
tests/: test_prompt_registry.py  test_temporal_up_features.py  test_towers.py
